Updated the initial data exploration file

--- a/notebooks/1.0-JVY-initial-data-exploration.ipynb
+++ b/notebooks/1.0-JVY-initial-data-exploration.ipynb
@@ -43,7 +43,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_PATH = '../data/external/kodak'"
+    "DATA_PATH = '../data/external/kodak'\n",
+    "\n",
+    "FIGURE_PATH = '../reports/figures'"
    ]
   },
   {
@@ -68,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7957d7f7",
    "metadata": {},
    "outputs": [
@@ -80,7 +82,7 @@
       "The images in the Kodak dataset are:\n",
       "--------------------------------------------------\n",
       "\n",
-      "kodim01.png| kodim02.png| kodim03.png| kodim04.png| kodim05.png| kodim06.png| kodim07.png| kodim08.png| kodim09.png| kodim10.png| kodim11.png| kodim12.png| kodim13.png| kodim14.png| kodim15.png| kodim16.png| kodim17.png| kodim18.png| kodim19.png| kodim20.png| kodim21.png| kodim22.png| kodim23.png| kodim24.png| "
+      "kodim01.png | kodim02.png | kodim03.png | kodim04.png | kodim05.png | kodim06.png | kodim07.png | kodim08.png | kodim09.png | kodim10.png | kodim11.png | kodim12.png | kodim13.png | kodim14.png | kodim15.png | kodim16.png | kodim17.png | kodim18.png | kodim19.png | kodim20.png | kodim21.png | kodim22.png | kodim23.png | kodim24.png | "
      ]
     }
    ],
@@ -124,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "90887cc3",
    "metadata": {},
    "outputs": [
@@ -172,6 +174,7 @@
     "    ax.grid()\n",
     "\n",
     "plt.tight_layout(pad=2)\n",
+    "plt.savefig('../reports/figures/pixel_distibution.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -214,6 +217,7 @@
     "    ax.remove()\n",
     "\n",
     "plt.tight_layout(pad=2)\n",
+    "plt.savefig('../reports/figures/kodak_dataset.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   }
