Added some figures

--- a/notebooks/1.0-JVY-initial-data-exploration.ipynb
+++ b/notebooks/1.0-JVY-initial-data-exploration.ipynb
@@ -174,7 +174,7 @@
     "    ax.grid()\n",
     "\n",
     "plt.tight_layout(pad=2)\n",
-    "plt.savefig('../reports/figures/pixel_distibution.png', dpi=300, bbox_inches='tight')\n",
+    "plt.savefig(FIGURE_PATH + '/pixel_distibution.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -217,7 +217,7 @@
     "    ax.remove()\n",
     "\n",
     "plt.tight_layout(pad=2)\n",
-    "plt.savefig('../reports/figures/kodak_dataset.png', dpi=300, bbox_inches='tight')\n",
+    "plt.savefig(FIGURE_PATH + '/kodak_dataset.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   }
