Refactor Makefile and update dataset processing scripts; add feature extraction and visualization functions

--- a/notebooks/1.0-JVY-initial-data-exploration.ipynb
+++ b/notebooks/1.0-JVY-initial-data-exploration.ipynb
@@ -24,27 +24,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b2b5cd8b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2025-04-20 00:31:38.898\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msrc.config\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m11\u001b[0m - \u001b[1mPROJ_ROOT path is: C:\\Users\\jayya\\OneDrive\\Desktop\\High Priority\\Research Paper\\Learned Image Compression\\learned_image_compression\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import numpy as np\n",
     "from PIL import Image\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from src.config import FIGURES_DIR\n",
+    "from src.config import EXTERNAL_DATA_DIR"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dedd52da",
+   "id": "95430612",
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_PATH = '../data/external/kodak'\n",
+    "DATA_PATH = os.path.join(EXTERNAL_DATA_DIR, 'kodak')\n",
     "\n",
-    "FIGURE_PATH = '../reports/figures'"
+    "FIGURE_PATH = os.path.join(FIGURES_DIR)"
    ]
   },
   {
