--- a/notebooks/1.0-JVY-initial-data-exploration.ipynb
+++ b/notebooks/1.0-JVY-initial-data-exploration.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b2b5cd8b",
    "metadata": {},
    "outputs": [
@@ -42,8 +42,7 @@
     "from PIL import Image\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from src.config import FIGURES_DIR\n",
-    "from src.config import EXTERNAL_DATA_DIR"
+    "from src.config import FIGURES_DIR, EXTERNAL_DATA_DIR"
    ]
   },
   {
