--- a/notebooks/2.0-JVY-final-data-preprocessing.ipynb
+++ b/notebooks/2.0-JVY-final-data-preprocessing.ipynb
@@ -2,7 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "619797b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4a115abf",
    "metadata": {},
    "outputs": [
@@ -20,8 +32,7 @@
     "from PIL import Image\n",
     "from tqdm import tqdm\n",
     "\n",
-    "from src.config import EXTERNAL_DATA_DIR\n",
-    "from src.config import PROCESSED_DATA_DIR"
+    "from src.config import EXTERNAL_DATA_DIR, PROCESSED_DATA_DIR"
    ]
   },
   {
